--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -16,8 +16,9 @@ activityCompose = "1.9.0"
 composeBom = "2024.06.00"
 appcompat = "1.7.0"
 loggingInterceptorVersion = "4.12.0"
-lottieCompose = "4.0.0"
+lottieCompose = "4.2.2"
 material = "1.12.0"
+materialVersion = "1.6.8"
 navigationCompose = "2.7.7"
 retrofitVersion = "2.9.0"
 hiltAndroid = "2.51.1"
@@ -26,9 +27,12 @@ hiltNavigationCompose = "1.2.0"
 lifecycleRuntimeComposeAndroid = "2.8.3"
 material3Android = "1.2.1"
 firebaseCrashlyticsBuildtools = "3.0.2"
+accompanistNavigationAnimation = "0.34.0"
 
 [libraries]
+accompanist-navigation-animation = { group = "com.google.accompanist", name = "accompanist-navigation-animation", version.ref = "accompanistNavigationAnimation" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+androidx-material = { module = "androidx.compose.material:material", version.ref = "materialVersion" }
 androidx-material3-android = { module = "androidx.compose.material3:material3-android", version.ref = "material3Android" }
 androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "navigationCompose" }
 coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coilCompose" }
